# EtherKraken

./: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
docs/: PINOUT.md
etherkraken-bootloader2/: CMakeLists.txt  CMakePresets.json  README.md  build.sh  gendefs.sh  genlink.sh  linker.ld
etherkraken-bootloader2/cmake/: embedded-toolchain.cmake  opencm3.cmake
etherkraken-bootloader2/src/: bl2_cpu.c  bl2_cpu.h  bl2_irq.c  bl2_protocol.h  bl2_uart.c  bl2_uart.h  main.c  uart.c  uart.h
etherkraken-core/: build.gradle.kts
etherkraken-core/src/nativeMain/kotlin/dev/karmakrafts/etherkraken/: IOClock.kt  IODispatcher.kt  IODriver.kt
etherkraken-rtos/: .gitignore  README.md  build.sh
etherkraken-rtos/boot/: cmdline.txt  config.txt  meta-data
etherkraken-rtos/example/: network-config
etherkraken-selftest/: build.gradle.kts  run_test.sh  run_test_ide.sh
etherkraken-selftest/src/nativeMain/kotlin/dev/karmakrafts/etherkraken/selftest/: Main.kt
gradle/: libs.versions.toml
kicad/: .gitignore  Coprocessor.kicad_sch  EtherKraken.csv  EtherKraken.kicad_pcb  EtherKraken.kicad_prl  EtherKraken.kicad_pro  EtherKraken.kicad_sch  Ethernet PHY.kicad_sch  Fan Controller.kicad_sch  IO.kicad_sch  Main Processor.kicad_sch  Power Conditioning.kicad_sch
libkraken/: CMakeLists.txt  CMakePresets.json  build.sh
libkraken-interop/: build.gradle.kts
libkraken-interop/src/linuxMain/kotlin/dev/karmakrafts/etherkraken/hal/: Board.kt  HALException.kt  IO.kt  Port.kt
libkraken-interop/src/linuxMain/kotlin/dev/karmakrafts/etherkraken/hal/config/: GPIOConfig.kt
libkraken-interop/src/nativeInterop/cinterop/: libkraken.def  libkraken_debug.def
libkraken-interop/src/nativeMain/kotlin/dev/karmakrafts/etherkraken/hal/: Board.kt  Clock.kt  Dispatcher.kt  Driver.kt  Errors.kt  HAL.kt  IO.kt  Port.kt
libkraken-interop/src/nativeMain/kotlin/dev/karmakrafts/etherkraken/hal/config/: BoardConfig.kt  BoardConfigDsl.kt  DefaultGPIOType.kt  GPIOConfig.kt  GPIOType.kt  I2CMuxConfig.kt  MuxConfig.kt  PinConfig.kt  SPIMuxConfig.kt
libkraken-interop/src/nativeMain/kotlin/dev/karmakrafts/etherkraken/hal/driver/: CustomDriver.kt  Driver.kt  SerialDriver.kt  SerialTxDriver.kt  UartTxDriver.kt
libkraken-selftest/: build.gradle.kts  run_test.sh  run_test_ide.sh
libkraken-selftest/src/nativeMain/kotlin/dev/karmakrafts/etherkraken/selftest/: Main.kt
libkraken/cmake/: cross-toolchain.cmake  test-toolchain.cmake  toolchain.cmake
libkraken/include/: kraken_alloc.h  kraken_api.h  kraken_board.h  kraken_clock.h  kraken_config.h  kraken_cpu.h  kraken_dispatcher.h  kraken_error.h  kraken_flash.h  kraken_handles.h  kraken_io.h  kraken_log.h  kraken_port.h  libkraken.h
libkraken/include/config/: kraken_config.h
libkraken/include/device/: bcm2835.h  mcp23017.h
libkraken/include/driver/: kraken_driver.h  kraken_serial_tx_driver.h  kraken_uart.h  kraken_uart_tx_driver.h
libkraken/src/: bcm2835.h  kraken_alloc.c  kraken_array_list.c  kraken_array_list.h  kraken_board.c  kraken_board_impl.h  kraken_clock.c  kraken_clock_impl.h  kraken_cpu.c  kraken_dispatcher.c  kraken_dispatcher_impl.h  kraken_error.c  kraken_error_impl.h  kraken_flash.c  kraken_flash_impl.h  kraken_internal.h  kraken_io.c  kraken_io_impl.h  kraken_log.c  kraken_log_impl.h  kraken_port.c  kraken_port_impl.h  kraken_string.c  kraken_string.h  libkraken.c  mcp23017.h
libkraken/src/config/: etherkraken_v1b.c  etherkraken_v1b.h  kraken_config.c  kraken_config_impl.h
libkraken/src/device/: bcm2835.c  bcm2835.h  kraken_intrin.h  mcp23017.c  mcp23017.h
libkraken/src/driver/: kraken_driver.c  kraken_driver_impl.h  kraken_serial_tx_driver.c  kraken_serial_tx_driver_impl.h  kraken_uart_tx_driver.c  kraken_uart_tx_driver_impl.h
libkraken/src/port/: kraken_gpio_port.c  kraken_gpio_port.h  kraken_i2c_mux_port.c  kraken_i2c_mux_port.h  kraken_port.c  kraken_port_impl.h  kraken_spi_mux_port.c  kraken_spi_mux_port.h
libkraken/src/util/: kraken_allocator.hpp  kraken_array_list.h  kraken_byte_queue.cpp  kraken_byte_queue.h  kraken_byte_queue.hpp  kraken_internal.h  kraken_ms_queue.c  kraken_ms_queue.h  kraken_mutex.c  kraken_mutex.h  kraken_string.c  kraken_string.h
libkraken/test/: ms_queue_test.cpp
